assets/css/main.css
@import "bb_grid.css";
@import "forms.css";
@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,700|Old+Standard+TT:400,400i,700');
/* @import "schedule"; */

:root {
  --space: 1.5em;
  --space-lg: 2em;
  --bg-color: #fff;
  --color-primary: #F6553B;
  --color-secondary: #FFF5CC;
  --color-bg: var(--color-primary);
  --color-bg-text: #fff;
  --color-color-text-body: var(--color-primary);
  --color-color-text-links: var(--color-primary);
  --color-starship: #000;

  --color-teal: #00D1B1;
  --color-red: #FD1A2E;
  --color-flamingo: #FF93B4;
  --color-indigo: #5949C6;

  --color-yellow: #f9fd50;
  --color-blue: #0C60CE;
  --color-green: #00bd56;
  --color-light-green: #85ef47;


  @custom-media --mini  (min-width: 280px) and (max-width: 374px);
  @custom-media --mobile  (min-width: 375px) and (max-width: 767px);
  @custom-media --tablet (min-width: 768px) and (max-width: 1024px);
  @custom-media --desktop (min-width: 1025px);
  @custom-media --desktop-xl (min-width: 1225px);


}
html {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

*, *:before, *:after {
  -webkit-box-sizing: inherit;
  box-sizing: inherit;
}


.table {
  border: solid 1px #000;
  padding: 1rem;
  width: 100%;

}
h1,h2,h3,h4, p.lead {
  font-weight: 200;
  font-family: 'IBM Plex Mono', Courier, 'Courier New', monospace;


}
h2, h3 {
  color: #3455F5
}
p.lead {
  line-height: 1.8;
  font-size: calc(12px + .7vw);
  @nest & b {
    display: block;border-bottom: 1px solid #000;
  }

}
#app-nav {

  text-align: center;
  font-size: 28px;
  margin: 2rem 0;

}
.columnar {
  border-bottom: solid 3px #207DFC;
  padding-bottom: 4px;
  font-size: 18px;
  width: 300px;
  display: block;
  margin: 0 auto;
  @media (--tablet), (--desktop) {
    width: 400px;
    font-size: 26px;
  }
  & .row {
    display: flex;
    text-align: right;
    justify-content: right;
    & span {
      flex: 1;
      font-family: 'IBM Plex Mono', Courier, 'Courier New', monospace;
      color: var(--color-blue)
    }

  }

}
body {
  font-family: 'Old Standard TT', serif;
  font-size: 20px;
  @media (--tablet), (--desktop) {
    font-size: 18px;
  }

  font-style: normal;
  line-height: 1.52;
  color: #000;
  background-color: #fff;
  text-rendering: optimizeLegibility;
  margin: 0 0 4vh 0;
  @media only screen and (min-width: 37.5em) {

  }
  & span.highlight {
    background: var(--color-yellow)

  }
}
.hidden {
  display: none;
}

a {
  color: inherit;
}
#intro, header {
  p:first-of-type {

    font-size: calc(12px + .7vw);


  }
}



#lineup {
  background-color: #eee;
  @nest & h2 {
    text-align: center;
    font-size: 28px;
    margin: 0;
    padding: 2rem 0 0 0;
    @media (--tablet), (--desktop) {
      font-size: 54px;
    }
    color: #000;
    font-weight: 900;
    text-transform: uppercase;
  }
  @nest & h3 {
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-size: 46px;
  }

}
.legend {
  margin: 0;
  padding: 0;
  list-style: none;
  @nest & li {
    text-align: center;

  }
}
.lineup {
  margin: 0;
  list-style: none;
  padding: 10px;
  @media (--tablet), (--desktop) {
    padding: 3rem;
  }
  &.games { background: color-mod(var(--color-flamingo) tint(60%)) }
  &.food { background: color-mod(var(--color-red) tint(90%)) }
  &.comics { background: color-mod(var(--color-teal) tint(80%)) }
  &.art { background: #000 }
  &.yami-ichi { background: #fff; }

  @nest & li {
    margin: 0 0 10px 0;
    padding: 0;
    @media (--tablet), (--desktop), (--desktop-xl) {
      display: flex;
      margin: 0;
      justify-content: space-between;

    }
  }
}
.legend {
  align-items: top;
  justify-content: space-around;
  display: flex;
  padding: 1rem;
  background: #fff;
  box-shadow: 12px 12px #ccc;
  margin: 2rem 0 4rem 0;
  list-style: none;
  @nest & li {
    margin: 0;
    padding: 0;
  }
}
@define-mixin legend $type, $color {

  li {
    flex: 1 0 33.3333%;
    padding: 0;
    text-indent: 0;
    & span {
    }
    & .project {
      display: block;
      font-size: 18px;
    }

    @media (--tablet), (--desktop), (--desktop-xl) {
      margin: 0 ;
      & .project {
        font-size: 24px;
      }
    }
    & .org {
      font-family: "IBM Plex Mono";
    }

  }
  .$(type) {
    color: $color;
    & .project, & .label {
      text-transform: uppercase;
      /* color: transparent !important;
      background-clip: text; */
      color: $color;
      /* background-image: linear-gradient(135deg, $color 0%, #000 100%); */

    }
    &:before {
      color: $color;
      margin-left: 0;
    }
    @mixin-content;
  }
}

@mixin legend game, #5360FF { }
@mixin legend comics, #FE6849 { }
@mixin legend yami, #000 { }
@mixin legend art, #fff { }
@mixin legend food, var(--color-teal) { }




ul {
  list-style: none;
  padding: 0;
  &.application-info {
    @nest & li {
      flex: 1 0 33.3333%;
      padding: 0;
      margin: 0 0 1rem 2.6rem;
      text-indent: 1.4rem;
      &:before {
        letter-spacing: 7px;
        font-weight: 400;
        font-style: normal;
        content: '\002043';
        color: inherit;
        margin-left: -3.8rem;
      }
    }
  }
  &.social {
    margin: 0;
    padding: 0;
    list-style: none;
    text-indent: 0;
    & li {
      margin: 0 4px;
      display: inline;
      & a {
        text-decoration: none;
      }
      &:before {
      }

    }


  }
}
li, p {
  line-height: 1.5;
  margin: 0 0 1rem;
  @nest & b {
    /* background:  linear-gradient(to left, #fff 0%, #eee 100%); */
    font-weight: 700;
  }
  @nest & strong {
    font-weight: 700;
  }
}
#lead {
  &::first-line {
    font-size: calc(12px + 2vw);
  }
  font-weight: 900;
  font-size: calc(12px + 1vw);

}
.container {
  margin: 0 4vw;
}
body.info {
  margin: 0 4vw;
  width: 60vw;

}
.gifs {

  margin: 3vh 0;

}

#logo {
  width: 80%;
  @nest & path {
    fill: var(--color-blue);
  }
  @media (--tablet), (--desktop) {
    width: 200px;
  }
}

@define-mixin name {
  letter-spacing: 1px;
  font-weight: 900;

}
.info {
  width: 100%;
  background: var(--color-yellow);
  color: #000;
  padding: 10px 0;
  margin: 0 0 1rem;
  @nest & p {
    font-size: 14px;
    text-align: center;
    font-family: "IBM Plex Mono";
    margin: 0;
  }
}
header {

  @nest & h4 {
    text-align: center
  }
  @nest & .intro-text > div {
    padding: 10px;
    flex: 1 1 0;
  }
  @nest & .intro-text {
    @media (--tablet), (--desktop), (--desktop-xl) {
      align-items: top;
      justify-content: space-evenly;
      display: flex;
    };
    font-size: calc(12px + 1vw);


  }
  @nest & .logos {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 3rem;
    flex-direction: row;


    @nest & .x {
      font-size: 40px;

      font-weight: 700;

      font-family: 'Old Standard TT';
    }
    @nest & img, & svg {
      max-width: 200px;
      margin: 1rem;
    }
  }

  position: relative;


  @nest & h1, & h3 { display: inline }

  @nest & h1 {
    @mixin name;
    color: var(--color-primary);
    font-size: calc(60px + 2vw);
    line-height: 1.2;
    margin-right: 1rem;
  }
  @nest & small.tagline {
    font-size: calc(12px + .5vw);


    font-weight: 100;
    text-transform: uppercase;
    letter-spacing: 5px;
    white-space: nowrap;
  }
  @nest & h2 {

    @nest & b  {
      color: var(--color-primary);
      white-space: nowrap;
    }
  }
}
#sections {
  display: flex;
  justify-content: flex-start;
  flex-flow: column nowrap;
  @nest & section {
    margin: 3rem 0 0;
    @media (--tablet), (--desktop) {
      padding: 0
    }

    &#schedule {
      margin: 0;
    }
    &#action {
      margin: 0 auto 3rem auto;
      width: 100%;
      text-align: center;
      display: flex;

      @nest & p {
        margin: 0 auto 1rem auto;
        display: flex;
      }
    }
    &#about {
      @nest & .logos {
        @nest & img {
          margin: 0 auto;
          display: block;
        }
      }
    }
    &#dates {
      @nest & h4 {

        font-style: italic;
        font-weight: 900;
        text-transform: uppercase;
        letter-spacing: 1px;

      }
    }
    @nest & .header-container {
      background-color: #000;
      @nest & h2 {
        font-size: calc(12px + 1vw);
        font-family: 'Old Standard TT', serif;
        font-style: italic;
        color: #fff;
        font-weight: 100;
        letter-spacing: 0.07vw;
        text-transform: uppercase;
        padding: 10px 0 4px 0;
        margin: 0;
      }
    }
  }
}

img {
  max-width: 100%;
}
.content {
  position: relative;
  display: flex;
  flex-direction: column;

}

footer {
  margin: 3rem;
  text-align: center;

}

.schedule {
  margin: 2rem auto;
  @media (--tablet), (--desktop) {
    /* margin: 4rem auto; */
    display: flex;
    @nest & .date {
      flex: 1;
      text-align: center;

    }
  }
}

.week,.dates {
  display: flex;
}
.day, .date {
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 0;
  text-align: center;

}

header {

  @nest & h1 { font-size: calc(32px + 2vw); }
}

@media (--tablet) {
  header {
    @nest & h1 { font-size: calc(60px + 2vw); }
  }
}


.Grid-cell.month { margin: 0}

@media (min-width: @break-sm) {
  .Grid-cell {
    &.month {
      margin: 0;
      &:first-child {
        margin-left: 0
      }
      &:last-child {
        margin-right: 0
      }
    }
  }
}

@media (--tablet) {
  .Grid-cell.month { margin: 0 1rem}
}




h3 {
  @media (--tablet), (--desktop) {
    font-size: 48px;
  }
  @nest & span.day, & span.date, & span.year {
    display: block;
    margin: 0;
  }
  @nest & span.date {
    margin: 0;
    padding: 0;
    font-size: calc(60px + .05vw);
  }
  @nest & span.day, & span.year {
    font-size: calc(16px + .05vw);
    display: none;
    font-weight: normal;

    letter-spacing: 1px;
  }
  font-style: normal;
  font-weight: 900;
  letter-spacing: -1px;
  color: var(--color-green);
  font-size: 32px;
}
.saturday {
  @media (--mini), (--mobile) {
    margin-top: 3rem;
  }
}
p.time {
  font-size: 32px;
  color: var(--color-light-green);
  @media (--tablet), (--desktop) {
    font-size: 48px;
  }

  font-weight: 900;
}

.soon {
  font-size: 80%;
  color: #444;
  background:  linear-gradient(to left, #fff 0%, #EBFEBF 100%);
  font-weight: normal;
}
.info strong {
  font-family: 'IBM Plex Mono'
}
#thank-you {
  @nest & .thanks-text {
    padding: 0 3rem;
  }
  @nest & .thanks-text p {
    text-align: center;
    font-size: calc(32px + .7vw);
  }
  @nest & h3 {

    display: block;

    font-size: calc(42px + .7vw);

  }
}
.button {
  font-family: 'IBM Plex Mono';
  letter-spacing: 1px;
  text-transform: uppercase;
  background: var(--color-blue);
}
.button-wrap {
  text-align: center;
  margin: 1rem auto;
  display: block;

}
.fancy {
  padding: 1rem 2rem;
  border-radius: 40rem;
  background: #FE6849;
  text-decoration: none;
  color: #fff;
  margin: 0 auto;
  font-family: "IBM Plex Mono";
  display: inline-block;
}

.tagline {
  color: var(--color-teal);
  @media (--tablet), (--desktop) {
    font-size: 42px;
  }
  text-align: center;
  width: 60vw;
  margin: 0 auto 2rem auto;
  line-height: normal;
}

